[package]
name = "hatchet"
version = "0.2.0"
authors = ["Léo-Paul COUTURIER <root@leops.me>"]
description = "Compiler and runtime for the Hatchet Language"
build = "build.rs"

[dependencies]
rayon = "0.8.1"
rand = "0.3.15"
unreachable = "0.1.1"
lazy_static = "0.2.8"
either = "1.1.0"
libc = "0.2.20"
clap = "2.26.0"
log = "0.3.8"
simplelog = "0.4.2"
string_cache = "0.6.2"
synom = "0.11"
vmfparser = "0.1.0"
llvm-sys = "40"
typed-arena = "1.3.0"
diff = "0.1.10"
term = "0.4.6"
clippy = { version = "0.0.158", optional = true }

[build-dependencies]
string_cache_codegen = "0.4"

[features]
default = []

[profile.release]
lto = true
